--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="GetPersonalPhoto.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="getpersonalphoto.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -44,7 +44,7 @@
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">preston@data.gov.sg</p>
+						<p class="text-detail">jmchugh@jtm-technology.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
